export const snapshot = {};

snapshot[`cli - "molt" 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules and configuration files

Options:

  -h, --help               - Show this help.                                              
  -v, --version            - Print version info.                                          
  --import-map   <file>    - Specify import map file                                      
  --ignore       <deps>    - Ignore dependencies                                          
  --only         <deps>    - Check specified dependencies                                 
  -w, --write              - Write changes to local files            (Conflicts: --commit)
  -c, --commit             - Commit changes to local git repository  (Conflicts: --write) 
  --pre-commit   <tasks>   - Run tasks before each commit            (Depends: --commit)  
  --post-commit  <tasks>   - Run tasks after each commit             (Depends: --commit)  
  --prefix       <prefix>  - Prefix for commit messages              (Depends: --commit)  
  --summary      <file>    - Write a summary of changes to file                           
  --report       <file>    - Write a report of changes to file                            

Examples:

  Check import maps in a config: molt deno.json                             
  Check imports in a module:     molt deps.ts                               
  Include multiple modules:      molt mod.ts lib.ts                         
  Target all .ts files:          molt ./**/*.ts                             
  Specify an import map:         molt mod.ts --import-map deno.json         
  Ignore specified dependencies: molt deps.ts --ignore=deno_graph,node_emoji
  Check deno_std only:           molt deps.ts --only deno.land/std          

"
`;

snapshot[`cli - "molt" 2`] = `
"  error: Missing argument(s): modules

"
`;

snapshot[`cli - "molt --help" 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules and configuration files

Options:

  -h, --help               - Show this help.                                              
  -v, --version            - Print version info.                                          
  --import-map   <file>    - Specify import map file                                      
  --ignore       <deps>    - Ignore dependencies                                          
  --only         <deps>    - Check specified dependencies                                 
  -w, --write              - Write changes to local files            (Conflicts: --commit)
  -c, --commit             - Commit changes to local git repository  (Conflicts: --write) 
  --pre-commit   <tasks>   - Run tasks before each commit            (Depends: --commit)  
  --post-commit  <tasks>   - Run tasks after each commit             (Depends: --commit)  
  --prefix       <prefix>  - Prefix for commit messages              (Depends: --commit)  
  --summary      <file>    - Write a summary of changes to file                           
  --report       <file>    - Write a report of changes to file                            

Examples:

  Check import maps in a config: molt deno.json                             
  Check imports in a module:     molt deps.ts                               
  Include multiple modules:      molt mod.ts lib.ts                         
  Target all .ts files:          molt ./**/*.ts                             
  Specify an import map:         molt mod.ts --import-map deno.json         
  Ignore specified dependencies: molt deps.ts --ignore=deno_graph,node_emoji
  Check deno_std only:           molt deps.ts --only deno.land/std          

"
`;

snapshot[`cli - "molt --help" 2`] = `""`;

snapshot[`cli - "molt --version" 1`] = `
"123.456.789
"
`;

snapshot[`cli - "molt --version" 2`] = `
"Fetching version info
"
`;

snapshot[`cli - "molt not_exist.ts" 1`] = `""`;

snapshot[`cli - "molt not_exist.ts" 2`] = `
'Path does not exist: "not_exist.ts"
'
`;

snapshot[`cli - "molt import.ts" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  import.ts 0.200.0
"
`;

snapshot[`cli - "molt import.ts" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt jsr.ts" 1`] = `
"📦 @std/assert 0.210.0 => 123.456.789
  jsr.ts 0.210.0
"
`;

snapshot[`cli - "molt jsr.ts" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt mod.ts" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  deno.json 1.0.0
"
`;

snapshot[`cli - import_map - "molt mod.ts" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt mod.ts --import-map deno.json" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  deno.json 1.0.0
"
`;

snapshot[`cli - import_map - "molt mod.ts --import-map deno.json" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt deno.json" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  deno.json 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  deno.json 0.50.0

📦 node-emoji 1.0.0 => 123.456.789
  deno.json 1.0.0
"
`;

snapshot[`cli - import_map - "molt deno.json" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore node-emoji" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  multiple_imports.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  multiple_imports.ts 0.50.0
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore node-emoji" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore=deno_graph,node-emoji" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  multiple_imports.ts 0.200.0
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore=deno_graph,node-emoji" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land/std" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  multiple_imports.ts 0.200.0
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land/std" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --only=deno.land/std,deno_graph" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  multiple_imports.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  multiple_imports.ts 0.50.0
"
`;

snapshot[`cli - "molt multiple_imports.ts --only=deno.land/std,deno_graph" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land --ignore deno_graph" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  multiple_imports.ts 0.200.0
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land --ignore deno_graph" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --write" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

💾 lib.ts
💾 mod.ts
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --write" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --write --summary title.txt --report body.md" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

💾 lib.ts
💾 mod.ts

📄 title.txt
📄 body.md
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --write --summary title.txt --report body.md" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump node-emoji from 2.0.0 to 123.456.789
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --prefix :package:" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

📝 :package: bump deno.land/std from 0.200.0 to 123.456.789
📝 :package: bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 :package: bump node-emoji from 2.0.0 to 123.456.789
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --prefix :package:" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --pre-commit=fmt --post-commit=lint" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

💾 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task lint...

💾 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task lint...

💾 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task lint...
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --pre-commit=fmt --post-commit=lint" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --summary title.txt --report body.md" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

📝 bump deno.land/std from 0.200.0 to 123.456.789
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
📝 bump node-emoji from 2.0.0 to 123.456.789

📄 title.txt
📄 body.md
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --summary title.txt --report body.md" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --summary title.txt --pre-commit=fmt" 1`] = `
"📦 deno.land/std 0.200.0 => 123.456.789
  lib.ts 0.200.0
  mod.ts 0.200.0

📦 deno.land/x/deno_graph 0.50.0 => 123.456.789
  mod.ts 0.50.0

📦 node-emoji 2.0.0 => 123.456.789
  mod.ts 2.0.0

💾 bump deno.land/std from 0.200.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 123.456.789

💾 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 123.456.789

💾 bump node-emoji from 2.0.0 to 123.456.789
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 123.456.789

📄 title.txt
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --summary title.txt --pre-commit=fmt" 2`] = `
"Checking for updates
"
`;
